# GITrello-GitHub-Integration-Service

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  README.md  docker-compose.yaml
manifests/gitrello-github-integration-service/: Chart.yaml  values.yaml
manifests/gitrello-github-integration-service/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
manifests/postgresql/: postgresql-pv.yaml  postgresql-sc.yaml  values.yaml
migrations/2020-08-23-112710_create__github_profile/: down.sql  up.sql
migrations/2020-08-27-135402_create__board_repository/: down.sql  up.sql
migrations/2020-09-06-151159_create__github_webhook/: down.sql  up.sql
src/: errors.rs  main.rs  schema.rs  state.rs
src/api/: board_repository.rs  github_profile.rs  github_repository.rs  github_webhook.rs  mod.rs  ping.rs
src/entities/: user.rs
src/middlewares/: authentication.rs
src/models/: board_repository.rs  github_profile.rs  github_webhook.rs  mod.rs
src/services/: board_repository_service.rs  github_api_client.rs  github_profile_service.rs  github_webhook_service.rs  gitrello_api_client.rs  mod.rs
src/services/repositories/: board_repository.rs  github_profile.rs  github_webhook.rs  mod.rs
src/value_objects/: github_api.rs  gitrello_api.rs  mod.rs
src/value_objects/request_data/: board_repository.rs  github_profile.rs  mod.rs  utils.rs  webhook.rs
src/value_objects/response_data/: board_repository.rs  github_profile.rs  github_repository.rs  mod.rs
(+1 files in other folders)
