[package]
name = "gitrello-github-integration-service"
version = "0.1.0"
authors = ["Uladzislau Stasheuski <fnsdevelopment@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0"
actix-web = "2"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
log = "0.4.11"
pretty_env_logger = "0.4.0"
