[package]
name = "gitrello-github-integration-service"
version = "0.1.0"
authors = ["Uladzislau Stasheuski <fnsdevelopment@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-cors = "0.2.0"
actix-http = "1.0"
actix-rt = "1.0"
actix-service = "1.0.6"
actix-threadpool = "0.3.3"
actix-web = "2"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
futures = "0.3.5"
jsonwebtoken = "7.2.0"
log = "0.4.11"
pretty_env_logger = "0.4.0"
r2d2 = "0.8.9"
reqwest = { version = "0.10.7", features = ["json"] }
serde = "1.0.115"
serde_json = "1.0"
thiserror = "1.0"
